remove-modernizer-maven-plugin-and-fix-maven-install-error